# pg-provision

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
docs/: pre-commit.md  test-plan-rhel.md  test-plan-ubuntu.md
src/: cli.py
src/_sh/os/: rhel.sh
src/pgprovision/: cli.py
src/pgprovision/_sh/: __init__.py  provision.sh  validate.sh
src/pgprovision/_sh/lib/: common.sh  hba.sh  profile.sh
src/pgprovision/_sh/os/: rhel.sh  ubuntu.sh
tests/: conftest.py  test_cli.py  test_config.py  test_hba.py  test_managed_blocks.py  test_os_detect.py  test_pgss.py  test_profile_overrides.py  test_secrets.py  test_stamp.py
