[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-provision"
version = "0.1.0"
description = "Idempotent PostgreSQL provisioning as a Python package (wrapping portable shell scripts)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{name="John Jenkins", email="scr1ptcat@protonmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
pgprovision = "pgprovision.cli:main"
pgprovision-validate = "pgprovision.cli:validate_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"pgprovision" = ["_sh/**"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]